feat: complete Redis application caching with coordinated invalidation
- Implement cache-aside pattern with external API integration
- Add Redis container and client configuration for Docker networking
- Create coordinated cache purging across Varnish and Redis layers
- Document multi-layer cache complexity and solutions
- Add comprehensive Redis application caching guide
- Update README to reflect complete implementation status
- Position as weekend hack tutorial with Amazon Q for mental model building
- Demonstrate production-ready caching patterns and performance optimization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,3 +55,8 @@ services:
     depends_on:
       - varnish1
       - varnish2
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
